add feature createuser, getalluserbyprofile, getuserbyemail and removeuser
